<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jesperancinha</groupId>
    <artifactId>coffee-paradigms</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <build.helper.plugin>1.10</build.helper.plugin>
        <args4j>2.33</args4j>
        <junit.version>4.12</junit.version>
        <log4j>1.2.17</log4j>
        <javax.concurrency.version>1.0</javax.concurrency.version>
        <javax.ejb.version>3.2.2</javax.ejb.version>
        <mockito.version>1.10.19</mockito.version>
        <maven.shade.version>2.4.3</maven.shade.version>
        <sun.xml.bind.version>2.3.0</sun.xml.bind.version>
        <jaxb-runtime.version>2.3.5</jaxb-runtime.version>
        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
        <cxf-xjc-plugin.version>3.3.1</cxf-xjc-plugin.version>
        <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
        <lombok.version>1.18.22</lombok.version>
        <javax.activation.version>1.2.0</javax.activation.version>
        <log4j-core.version>2.15.0</log4j-core.version>
        <slf4j-api.version>1.7.32</slf4j-api.version>
        <jaxb-api.version>2.3.1</jaxb-api.version>
        <truth.version>0.42</truth.version>
        <activation.version>1.1.1</activation.version>
        <spring-boot.version>2.6.1</spring-boot.version>
    </properties>

    <modules>
        <module>coffee-system-api</module>
        <module>coffee-system</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jesperancinha</groupId>
                <artifactId>coffee-system-api</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>${activation.version}</version>
            </dependency>
            <dependency>
                <groupId>args4j</groupId>
                <artifactId>args4j</artifactId>
                <version>${args4j}</version>
            </dependency>
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>${jaxb-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${jaxb-runtime.version}</version>
            </dependency>
            <dependency>
                <groupId>com.sun.activation</groupId>
                <artifactId>javax.activation</artifactId>
                <version>${javax.activation.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.truth</groupId>
                <artifactId>truth</artifactId>
                <version>${truth.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>